# streamlit-facade

./: CONTEXT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.streamlit/: config.toml
examples/: demo.py
facade/: __init__.py  icons.py  lucide.py  theme.py
facade/components/: accordion.py  alert.py  badge.py  button.py  card.py  checkbox.py  datepicker.py  iconcard.py  input.py  linkbutton.py  metric.py  progress.py  radio.py  select.py  separator.py  sidebar.py  slider.py  spinner.py  styledcontainer.py  tabs.py  textarea.py  toast.py  toggle.py  topbar.py
streamlit_facade.egg-info/: PKG-INFO  SOURCES.txt
