[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-facade"
version = "0.1.2"
description = "streamlit but different"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniyal M" }]
requires-python = ">=3.8"
dependencies = ["streamlit>=1.35.0"]
keywords = [
    "streamlit",
    "ui",
    "components",
    "theme",
    "design",
    "shadcn",
    "dashboard",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://facade-docs.streamlit.app/"
Documentation = "https://facade-docs.streamlit.app/"
Repository = "https://github.com/itsdaniyalm/streamlit-facade"
"Bug Tracker" = "https://github.com/itsdaniyalm/streamlit-facade/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["facade*"]